--- a/werkplekleren.html
+++ b/werkplekleren.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
-    <title>Document</title>
+    <title>Werkplekleren</title>
 </head>
 <body>
     <header>
@@ -13,22 +13,14 @@
         <p class="subtitle">Student programmeren</p>
 
         <div class="topnav" id="myTopnav">
-            <a href="#" class="active">Home</a>
+            <a href="index.html">Home</a>
             <a href="over-mij.html">Over mij</a>
             <a href="projecten.html">Projecten</a>
-            <a href="werkplekleren.html">Werkplekleren</a>
+            <a href="werkplekleren.html" class="active">Werkplekleren</a>
             <a href="contact.html">Contact</a>
             <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
           </div>
     </header>
-    
-    <main>
-
-    </main>
-
-    <footer>
-        <p>&copy; 2021 Brent Van Hese | <a href="../index.html">Home</a> <a href="../over_mij.html">Over mij</a> <a href="../projecten.html">Projecten</a> <a href="../werkplekleren.html">Werkplekleren</a> <a href="../contact.html">Contacteer mij</a></p>
-    </footer>
 </body>
 <script>
     function myFunction() {
@@ -41,4 +33,3 @@
     }
 </script>
 </html>
-
