--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     </header>
     
     <main>
-
+        
     </main>
 
     <footer>
-        <p>&copy; 2021 Brent Van Hese | <a href="../index.html">Home</a> <a href="../over_mij.html">Over mij</a> <a href="../projecten.html">Projecten</a> <a href="../werkplekleren.html">Werkplekleren</a> <a href="../contact.html">Contacteer mij</a></p>
+        <p>&copy; 2021 Brent Van Hese | <a href="#">Home</a> <a href="over-mij.html">Over mij</a> <a href="projecten.html">Projecten</a> <a href="werkplekleren.html">Werkplekleren</a> <a href="contact.html">Contacteer mij</a></p>
     </footer>
 </body>
 <script>
