--- a/werkplekleren.html
+++ b/werkplekleren.html
@@ -21,6 +21,14 @@
             <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
           </div>
     </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+        <p>&copy; 2021 Brent Van Hese | <a href="index.html">Home</a> <a href="over-mij.html">Over mij</a> <a href="projecten.html">Projecten</a> <a href="werkplekleren.html">Werkplekleren</a> <a href="contact.html">Contacteer mij</a></p>
+    </footer>
 </body>
 <script>
     function myFunction() {
