make project cards + detailpagina's

--- a/projecten.html
+++ b/projecten.html
@@ -23,7 +23,36 @@
     </header>
 
     <main>
+        <h2>Projecten</h2>
 
+        <section class="project-cards">
+            <div class="card">
+                <img src="images/projecten/portfolio.PNG" alt="Portfolio">
+                <div class="container">
+                  <h4><b>Portfolio</b></h4> 
+                  <p>tekst over portfolio</p>
+                  <a href="detailpagina/portfolio.html">Meer info</a>
+                </div>
+            </div>
+    
+            <div class="card">
+                <img src="images/projecten/build_a_city.PNG" alt="Build a city" >
+                <div class="container">
+                  <h4><b>Build a city</b></h4> 
+                  <p>tekst over Build a city</p>
+                  <a href="detailpagina/build-a-city.html">Meer info</a>
+                </div>
+            </div>
+    
+            <div class="card">
+                <img src="images/projecten/portfolio.PNG" alt="Portfolio">
+                <div class="container">
+                  <h4><b>Portfolio</b></h4> 
+                  <p>tekst over portfolio</p>
+                  <a href="detailpagina/portfolio.html">Meer info</a>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
