contact form + breadcrumbs + cards padding toevoegen

--- a/detailpagina/build-a-city.html
+++ b/detailpagina/build-a-city.html
@@ -23,7 +23,12 @@
     </header>
     
     <main>
-        
+        <h2>Build a city</h2>
+        <ul class="breadcrumb">
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../projecten.html">Projecten</a></li>
+            <li>Build a city</li>
+        </ul>
     </main>
 
     <footer>
