--- a/projecten.html
+++ b/projecten.html
@@ -27,7 +27,7 @@
 
         <section class="project-cards">
             <div class="card">
-                <img src="images/projecten/portfolio.PNG" alt="Portfolio">
+                <div class="sizeBoxPhotoProject"><img src="images/projecten/portfolio.PNG" alt="Portfolio"></div>
                 <div class="container">
                   <h4><b>Portfolio</b></h4> 
                   <p>tekst over portfolio</p>
@@ -36,7 +36,7 @@
             </div>
     
             <div class="card">
-                <img src="images/projecten/build_a_city.PNG" alt="Build a city" >
+                <div class="sizeBoxPhotoProject"><img src="images/projecten/build_a_city.PNG" alt="Build a city" ></div>
                 <div class="container">
                   <h4><b>Build a city</b></h4> 
                   <p>tekst over Build a city</p>
@@ -45,10 +45,10 @@
             </div>
     
             <div class="card">
-                <img src="images/projecten/portfolio.PNG" alt="Portfolio">
+                <div class="sizeBoxPhotoProject"><img src="images/projecten/portfolio.PNG" alt="Console game"></div>
                 <div class="container">
-                  <h4><b>Portfolio</b></h4> 
-                  <p>tekst over portfolio</p>
+                  <h4><b>Console game</b></h4> 
+                  <p>tekst over console game</p>
                   <a href="detailpagina/portfolio.html">Meer info</a>
                 </div>
             </div>
