--- a/detailpagina/console-game.html
+++ b/detailpagina/console-game.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/style.css">
-    <title>Portfolio</title>
+    <title>Console game</title>
 </head>
 <body>
     <header>
@@ -23,11 +23,11 @@
     </header>
     
     <main>
-        <h2>Portfolio</h2>
+        <h2>Console game</h2>
         <ul class="breadcrumb">
             <li><a href="../index.html">Home</a></li>
             <li><a href="../projecten.html">Projecten</a></li>
-            <li>Portfolio</li>
+            <li>Console game</li>
         </ul>
     </main>
 
