--- a/index.html
+++ b/index.html
@@ -11,19 +11,33 @@
     <header>
         <h1>Brent Van Hese</h1>
         <p class="subtitle">Student programmeren</p>
-
-        <div class="topnav" id="myTopnav">
+        <nav  class="topnav" id="myTopnav">
             <a href="#" class="active">Home</a>
             <a href="over-mij.html">Over mij</a>
             <a href="projecten.html">Projecten</a>
             <a href="werkplekleren.html">Werkplekleren</a>
             <a href="contact.html">Contact</a>
             <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
-          </div>
+        </nav>
     </header>
     
     <main>
-        
+        <p>Ik ben Brent Van Hese, ik volg de richting Graduaat programmeren aan <a href="https://www.thomasmore.be/" target="blank">Thomas More</a> omdat ik heel erg geïnteresseerd ben in programmeren van (web)apps.</p>
+
+        <section>
+            <h2>Wie ben ik?</h2>
+            <p>Ik ben Brent. En wil u graag weten welke richting ik volg en waarom. En wat mijn ambitie is. Bekijk dan zeker mijn '<a href="over-mij.html">over mij</a>' pagina.</p>
+        </section>
+
+        <section>
+            <h2>Mijn werk</h2>
+            <p>Als u benieuwd ben naar wat ik al gecodeerd heb, kijk dan zeker eens naar de '<a href="projecten.html">projecten</a>' pagina eens.</p>
+        </section>
+
+        <section>
+            <h2>Curriculum vitae</h2>
+            <p>Heeft u interesse in mijn cv, klik dan <a href="docs/Brent-Van-Hese.pdf" target="blank">hier</a>.</p>
+        </section>
     </main>
 
     <footer>
