--- a/over-mij.html
+++ b/over-mij.html
@@ -23,6 +23,27 @@
     </header>
 
     <main>
+        <h2>Over mij</h2>
+
+        <section>
+            <h3>Wat studeer ik?</h3>
+            <p>Ik volg het graduaat programmeren aan <a href="https://www.thomasmore.be/" target="blank">Thomas More</a> op campus Sint-Andries Antwerpen. Dit is een 2 jarige opleiding in dagonderwijs waarin je klaar wordt gestoomd tot (web)developer.</p>
+        </section>
+
+        <section>
+            <h3>Meer info over het graduaat programmeren</h3>
+            <p>Wil je meer weten over wat deze richting in houd bekijk dan <a href="https://www.thomasmore.be/opleidingen/graduaat/programmeren-dag-avondonderwijs/programmeren-dagonderwijs/antwerpen-0" target="blank">deze website</a>.</p>
+        </section>
+
+        <section>
+            <h3>Voor graduaat</h3>
+            <p>In het middelbaar heb ik de richting Boekhouden-Informatica gevolgd aan OLVP in Sint-Niklaas.<br>Na het middelbaar heb ik de richting Toegepast Informatica gevolgd aan Karel de Grote Hogeschool Groenplaats. Na 1 jaar ben ik hiermee gestopt omdat dit te technisch was voor mij en ik meer praktijk zocht.</p>
+        </section>
+
+        <section>
+            <h3>Ambitie</h3>
+            <p>Graag wil ik na de opleiding Graduaat programmeren aan de slag gaan als (web)developer.</p>
+        </section>
 
     </main>
 
