--- a/projecten.html
+++ b/projecten.html
@@ -49,7 +49,7 @@
                 <div class="container">
                   <h4><b>Console game</b></h4> 
                   <p>tekst over console game</p>
-                  <a href="detailpagina/portfolio.html">Meer info</a>
+                  <a href="detailpagina/console-game.html">Meer info</a>
                 </div>
             </div>
         </section>
