--- a/index.html
+++ b/index.html
@@ -21,20 +21,21 @@
         </nav>
     </header>
     
-    <main>
-        <p>Ik ben Brent Van Hese, ik volg de richting Graduaat programmeren aan <a href="https://www.thomasmore.be/" target="blank">Thomas More</a> omdat ik heel erg geïnteresseerd ben in programmeren van (web)apps.</p>
+    <main class="index">
+        <img class="photo" src="images/profielfoto.jpg" alt="profielfoto">
+        <p class="info">Ik ben Brent Van Hese, ik volg de richting Graduaat programmeren aan <a href="https://www.thomasmore.be/" target="blank">Thomas More</a> omdat ik heel erg geïnteresseerd ben in programmeren van (web)apps.</p>
 
-        <section>
+        <section class="wieBenIk">
             <h2>Wie ben ik?</h2>
             <p>Ik ben Brent. En wil u graag weten welke richting ik volg en waarom. En wat mijn ambitie is. Bekijk dan zeker mijn '<a href="over-mij.html">over mij</a>' pagina.</p>
         </section>
 
-        <section>
+        <section class="mijnWerk">
             <h2>Mijn werk</h2>
             <p>Als u benieuwd ben naar wat ik al gecodeerd heb, kijk dan zeker eens naar de '<a href="projecten.html">projecten</a>' pagina eens.</p>
         </section>
 
-        <section>
+        <section class="cv">
             <h2>Curriculum vitae</h2>
             <p>Heeft u interesse in mijn cv, klik dan <a href="docs/Brent-Van-Hese.pdf" target="blank">hier</a>.</p>
         </section>
