add project bootstrap website + make nav detailpages responsive

--- a/detailpagina/bootstrap-website.html
+++ b/detailpagina/bootstrap-website.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/style.css">
-    <title>Portfolio</title>
+    <title>Bootstrap website</title>
 </head>
 <body>
-    <header>
+    <head>
         <h1>Brent Van Hese</h1>
         <p class="subtitle">Student programmeren</p>
 
@@ -20,14 +20,14 @@
             <a href="../contact.html">Contact</a>
             <a href="../javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
           </div>
-    </header>
-    
+    </head>
+
     <main>
-        <h2>Portfolio</h2>
+        <h2>Bootstrap website</h2>
         <ul class="breadcrumb">
             <li><a href="../index.html">Home</a></li>
             <li><a href="../projecten.html">Projecten</a></li>
-            <li>Portfolio</li>
+            <li>Bootstrap website</li>
         </ul>
 
         <!-- Slideshow container -->
@@ -64,10 +64,13 @@
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
         </div>
+
     </main>
 
     <footer>
-        <p>&copy; 2021 Brent Van Hese | <a href="../index.html">Home</a> <a href="../over-mij.html">Over mij</a> <a href="../projecten.html">Projecten</a> <a href="../werkplekleren.html">Werkplekleren</a> <a href="../contact.html">Contacteer mij</a></p>
+        <footer>
+            <p>&copy; 2021 Brent Van Hese | <a href="../index.html">Home</a> <a href="../over-mij.html">Over mij</a> <a href="../projecten.html">Projecten</a> <a href="../werkplekleren.html">Werkplekleren</a> <a href="../contact.html">Contacteer mij</a></p>
+        </footer>
     </footer>
 </body>
 <script>
@@ -79,7 +82,7 @@
             x.className = "topnav";
         }
     }
-    
+
     var slideIndex = 1;
     showSlides(slideIndex);
 
