--- a/detailpagina/build-a-city.html
+++ b/detailpagina/build-a-city.html
@@ -71,6 +71,15 @@
     </footer>
 </body>
 <script>
+    function myFunction() {
+        var x = document.getElementById("myTopnav");
+        if (x.className === "topnav") {
+            x.className += " responsive";
+        } else {
+            x.className = "topnav";
+        }
+    }
+    
     var slideIndex = 1;
     showSlides(slideIndex);
 
