--- a/projecten.html
+++ b/projecten.html
@@ -52,6 +52,15 @@
                   <a href="detailpagina/console-game.html">Meer info</a>
                 </div>
             </div>
+
+            <div class="card">
+                <div class="sizeBoxPhotoProject"><img src="images/projecten/portfolio.PNG" alt="Console game"></div>
+                <div class="container">
+                  <h4><b>Bootstrap website</b></h4> 
+                  <p>tekst over Bootstrap website</p>
+                  <a href="detailpagina/bootstrap-website.html">Meer info</a>
+                </div>
+            </div>
         </section>
     </main>
 
