--- a/detailpagina/console-game.html
+++ b/detailpagina/console-game.html
@@ -72,6 +72,15 @@
 </body>
 
 <script>
+    function myFunction() {
+        var x = document.getElementById("myTopnav");
+        if (x.className === "topnav") {
+            x.className += " responsive";
+        } else {
+            x.className = "topnav";
+        }
+    }
+    
     var slideIndex = 1;
     showSlides(slideIndex);
 
