--- a/detailpagina/bootstrap-website.html
+++ b/detailpagina/bootstrap-website.html
@@ -69,7 +69,7 @@
 
     <footer>
         <footer>
-            <p>&copy; 2021 Brent Van Hese | <a href="../index.html">Home</a> <a href="../over-mij.html">Over mij</a> <a href="../projecten.html">Projecten</a> <a href="../werkplekleren.html">Werkplekleren</a> <a href="../contact.html">Contacteer mij</a></p>
+            <p>&copy; <span id="copyright"></span> Brent Van Hese | <a href="../index.html">Home</a> <a href="../over-mij.html">Over mij</a> <a href="../projecten.html">Projecten</a> <a href="../werkplekleren.html">Werkplekleren</a> <a href="../contact.html">Contacteer mij</a></p>
         </footer>
     </footer>
 </body>
@@ -111,5 +111,7 @@
         slides[slideIndex-1].style.display = "block";
         dots[slideIndex-1].className += " active_photo";
     }
+
+    document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
 </script>
 </html>
