--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2021 Brent Van Hese | <a href="#">Home</a> <a href="over-mij.html">Over mij</a> <a href="projecten.html">Projecten</a> <a href="werkplekleren.html">Werkplekleren</a> <a href="contact.html">Contacteer mij</a></p>
+        <p>&copy; <span id="copyright"></span> Brent Van Hese | <a href="#">Home</a> <a href="over-mij.html">Over mij</a> <a href="projecten.html">Projecten</a> <a href="werkplekleren.html">Werkplekleren</a> <a href="contact.html">Contacteer mij</a></p>
     </footer>
 </body>
 <script>
@@ -54,6 +54,8 @@
             x.className = "topnav";
         }
     }
+
+    document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
 </script>
 </html>
 
