--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,8 @@
     </main>
 
     <footer>
-        <p>&copy; <span id="copyright"></span> Brent Van Hese | <a href="index.html">Home</a> <a href="over-mij.html">Over mij</a> <a href="projecten.html">Projecten</a> <a href="werkplekleren.html">Werkplekleren</a> <a href="contact.html">Contacteer mij</a></p>
+        <p>&copy; <span id="copyright"></span> Brent Van Hese</p>
+        <p><a href="index.html">Home</a> <a href="over-mij.html">Over mij</a> <a href="projecten.html">Projecten</a> <a href="werkplekleren.html">Werkplekleren</a> <a href="contact.html">Contact</a></p>
     </footer>
 </body>
 <script>
