--- a/over-mij.html
+++ b/over-mij.html
@@ -37,7 +37,7 @@
 
         <section>
             <h3>Voor graduaat</h3>
-            <p>In het middelbaar heb ik de richting Boekhouden-Informatica gevolgd aan OLVP in Sint-Niklaas.<br>Na het middelbaar heb ik de richting Toegepast Informatica gevolgd aan Karel de Grote Hogeschool Groenplaats. Na 1 jaar ben ik hiermee gestopt omdat dit te technisch was voor mij en ik meer praktijk zocht.</p>
+            <p>In het middelbaar heb ik de richting Boekhouden-Informatica gevolgd aan <abbr title="Onze Lieve  Vrouwe Presentatie">OLVP</abbr> in Sint-Niklaas. Na het middelbaar heb ik de richting Toegepast Informatica gevolgd aan Karel de Grote Hogeschool Groenplaats. Na 1 jaar ben ik hiermee gestopt omdat dit te technisch was voor mij en ik meer praktijk zocht.</p>
         </section>
 
         <section>
@@ -48,7 +48,8 @@
     </main>
 
     <footer>
-        <p>&copy; <span id="copyright"></span> Brent Van Hese | <a href="index.html">Home</a> <a href="over-mij.html">Over mij</a> <a href="projecten.html">Projecten</a> <a href="werkplekleren.html">Werkplekleren</a> <a href="contact.html">Contacteer mij</a></p>
+        <p>&copy; <span id="copyright"></span> Brent Van Hese</p>
+        <p><a href="index.html">Home</a> <a href="over-mij.html">Over mij</a> <a href="projecten.html">Projecten</a> <a href="werkplekleren.html">Werkplekleren</a> <a href="contact.html">Contact</a></p>
     </footer>
 </body>
 <script>
