--- a/werkplekleren.html
+++ b/werkplekleren.html
@@ -23,11 +23,18 @@
     </header>
 
     <main>
+        <h2>Werkplekleren</h2>
 
+        <section class="center">
+            <h3>Aan deze pagina wordt nog hard gewerkt!</h3>
+            <img class="wrkvld" src="images/werkveld-photo.jpg" alt="under construction">    
+        </section>
+        
     </main>
 
     <footer>
-        <p>&copy; <span id="copyright"></span> Brent Van Hese | <a href="index.html">Home</a> <a href="over-mij.html">Over mij</a> <a href="projecten.html">Projecten</a> <a href="werkplekleren.html">Werkplekleren</a> <a href="contact.html">Contacteer mij</a></p>
+        <p>&copy; <span id="copyright"></span> Brent Van Hese</p>
+        <p><a href="index.html">Home</a> <a href="over-mij.html">Over mij</a> <a href="projecten.html">Projecten</a> <a href="werkplekleren.html">Werkplekleren</a> <a href="contact.html">Contact</a></p>
     </footer>
 </body>
 <script>
