--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     <main>
         <h2>Contacteer mij</h2>
         <div class="container-contactform">
-            <form action="post-demo.php">
+            <form action="post-demo.php" method="post">
           
               <label for="fname">Voornaam :</label>
               <input type="text" id="fname" name="firstname" placeholder="Uw voornaam">
