--- a/projecten.html
+++ b/projecten.html
@@ -67,7 +67,7 @@
 
     <footer>
         <p>&copy; <span id="copyright"></span> Brent Van Hese</p>
-        <p><a href="index.html">Home</a> <a href="over-mij.html">Over mij</a> <a href="projecten.html">Projecten</a> <a href="werkplekleren.html">Werkplekleren</a> <a href="contact.html">Contact</a></p>
+        <p><a href="index.html">Home</a> - <a href="over-mij.html">Over mij</a> - <a href="projecten.html">Projecten</a> - <a href="werkplekleren.html">Werkplekleren</a> - <a href="contact.html">Contact</a></p>
     </footer>
 </body>
 <script>
