--- a/detailpagina/bootstrap-website.html
+++ b/detailpagina/bootstrap-website.html
@@ -19,7 +19,7 @@
             <a href="../projecten.html">Projecten</a>
             <a href="../werkplekleren.html">Werkplekleren</a>
             <a href="../contact.html">Contact</a>
-            <a href="../javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+            <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
           </div>
     </head>
 
