detailpagina portfolio en bootstrap gemaakt

--- a/detailpagina/bootstrap-website.html
+++ b/detailpagina/bootstrap-website.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/style.css">
-    <link rel="icon" href="../images/profielfoto.jpg">
+    <link rel="icon" href="../images/profielfoto-icon.jpg">
     <title>Bootstrap website</title>
 </head>
 <body>
@@ -65,7 +65,21 @@
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
         </div>
+        
+        <h3>Opdracht</h3>
+        <p>Je maakt een site over een thema (hobby, interesse, idool, favoriete film, favoriete artiest, boek, vereniging, huisdier, game …)<br>Deze themasite is met Bootstrap gemaakt.<br>De richtlijnen voor deze site zijn als volgt:</p>
+        <ul>
+            <li>minimum 3 pagina’s,</li>
+            <li>er is navigatie,</li>
+            <li>je maakt veelvuldig gebruik van grafische elementen,</li>
+            <li>geen placeholder content (‘lorem ipsum’), eventueel kopieer tekst van Wikipedia of andere open sites (met bronvermelding),</li>
+            <li>de site voldoet aan de richtlijnen ivm design en UX uit de cursus user interfaces,</li>
+            <li>de site responsive.</li>
+        </ul>
 
+        <h3>Linken</h3>
+        <p><a href="#" target="blank">Site</a></p>
+        <p><a href="https://github.com/brentvanhese/responsive-bootstrap" target="blank">GitHub</a></p>
     </main>
 
     <footer>
