--- a/detailpagina/portfolio.html
+++ b/detailpagina/portfolio.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/style.css">
-    <link rel="icon" href="../images/profielfoto.jpg">
+    <link rel="icon" href="../images/profielfoto-icon.jpg">
     <title>Portfolio</title>
 </head>
 <body>
@@ -65,6 +65,27 @@
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
         </div>
+
+
+        <h3>Opdracht</h3>
+        <h4>Versie 1 en versie 2</h4>
+        <p>De eindversie van je portfolio voor dit vak moet minimaal de volgende onderdelen bevatten:</p>
+        <ul>
+            <li>een homepagina</li>
+            <li>‘over mij’ pagina (met een link naar je CV in pdf-formaat; in het vak Werkveldexploratie zetten we je CV verder op punt)</li>
+            <li>overzichtspagina met projecten (en voor elk project dat je erop zet maak je een detailpagina met een korte beschrijving, uitleg over de evolutie van het project, één of meerdere screenshots en een link naar de code; dat kan een zip-bestand zijn met de code of een link naar een github-repository. Voorlopig kan je het maken van de portfoliosite zelf erop zetten en eventueel iets over de Scrum-simulatie uit het vak ‘Project management’, je kan er ook je eindverslag van het Time Management-deel aan toevoegen (als je andere ‘projecten’ zou gedaan hebben bij andere vakken, mogen die er uiteraard ook bij),</li>
+            <li>een pagina ‘werkplekleren’ die voorlopig nog blanco is,</li>
+            <li>een contactformulier (dit moet nog niet werken; gewoon de echo is momenteel voldoende.</li>
+        </ul>
+
+        <h4>Versie 3</h4>
+        <p>Het responsive maken van de website.</p>
+
+        <h3>Linken</h3>
+        <p><a href="../index.html">Site</a></p>
+        <p><a href="https://github.com/brentvanhese/portfolio_v2" target="blank">GitHub</a></p>
+
+        
     </main>
 
     <footer>
