--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
-    <link rel="icon" href="images/profielfoto.jpg">
+    <link rel="icon" href="images/profielfoto-icon.jpg">
     <title>Home</title>
 </head>
 <body>
@@ -23,7 +23,7 @@
     </header>
     
     <main class="index">
-        <img class="photo" src="images/profielfoto.jpg" alt="profielfoto">
+        <img class="photo" src="images/profielfoto-icon.jpg" alt="profielfoto">
         <p class="info">Ik ben Brent Van Hese, ik volg de richting Graduaat programmeren aan <a href="https://www.thomasmore.be/" target="blank">Thomas More</a> omdat ik heel erg geïnteresseerd ben in programmeren van (web)apps.</p>
 
         <section class="wieBenIk">
