detailpagina build a city invullen + projecten cards tekst bijzetten

--- a/projecten.html
+++ b/projecten.html
@@ -31,7 +31,7 @@
                 <div class="sizeBoxPhotoProject"><img src="images/projecten/portfolio.PNG" alt="Portfolio"></div>
                 <div class="container">
                   <h4><b>Portfolio</b></h4> 
-                  <p>tekst over portfolio</p>
+                  <p>De website die als mijn portfolio dient. Gemaakt met HTML en CSS.</p>
                   <a href="detailpagina/portfolio.html">Meer info</a>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                 <div class="sizeBoxPhotoProject"><img src="images/projecten/build_a_city.PNG" alt="Build a city" ></div>
                 <div class="container">
                   <h4><b>Build a city</b></h4> 
-                  <p>tekst over Build a city</p>
+                  <p>Bij deze opdracht moesten we met de hele groep van studenten een eiland maken. En dit was dan ook een SCRUM simulatie.</p>
                   <a href="detailpagina/build-a-city.html">Meer info</a>
                 </div>
             </div>
@@ -58,7 +58,7 @@
                 <div class="sizeBoxPhotoProject"><img src="images/projecten/portfolio.PNG" alt="Console game"></div>
                 <div class="container">
                   <h4><b>Bootstrap website</b></h4> 
-                  <p>tekst over Bootstrap website</p>
+                  <p>Een website die gemaakt is met HTML en Bootstrap.</p>
                   <a href="detailpagina/bootstrap-website.html">Meer info</a>
                 </div>
             </div>
