--- a/over-mij.html
+++ b/over-mij.html
@@ -46,6 +46,11 @@
             <p>Graag wil ik na de opleiding Graduaat programmeren aan de slag gaan als (web)developer.</p>
         </section>
 
+        <section>
+            <h2>Curriculum vitae</h2>
+            <p>Heeft u interesse in mijn cv, klik dan <a href="docs/Brent-Van-Hese.pdf" target="blank">hier</a>.</p>
+        </section>
+
     </main>
 
     <footer>
