over mij foto's toevoegen

--- a/over-mij.html
+++ b/over-mij.html
@@ -23,31 +23,45 @@
           </div>
     </header>
 
-    <main>
-        <h2>Over mij</h2>
+    <main class="overMij">
+        <h2 class="overMijTitel">Over mij</h2>
 
-        <section>
+        <section class="watStudeerIk">
             <h3>Wat studeer ik?</h3>
             <p>Ik volg het graduaat programmeren aan <a href="https://www.thomasmore.be/" target="blank">Thomas More</a> op campus Sint-Andries Antwerpen. Dit is een 2 jarige opleiding in dagonderwijs waarin je klaar wordt gestoomd tot (web)developer.</p>
         </section>
 
-        <section>
+        <section class="sint-andries">
+            <p>
+                <img src="images/sint-andries_teaser.png" alt="Campus Sint-Andries">
+                <br>Bron: <cite>Thomas More</cite>
+            </p>
+        </section>
+
+        <section class="meerInfo">
             <h3>Meer info over het graduaat programmeren</h3>
             <p>Wil je meer weten over wat deze richting in houd bekijk dan <a href="https://www.thomasmore.be/opleidingen/graduaat/programmeren-dag-avondonderwijs/programmeren-dagonderwijs/antwerpen-0" target="blank">deze website</a>.</p>
         </section>
 
-        <section>
+        <section class="olvp">
+            <p>
+                <img src="images/olvp.jpg" alt="OLVP">
+                <br>Bron: <cite>Facebook OLVP Sint-Niklaas</cite>
+            </p>
+        </section>
+
+        <section class="voorGraduaat">
             <h3>Voor graduaat</h3>
             <p>In het middelbaar heb ik de richting Boekhouden-Informatica gevolgd aan <abbr title="Onze Lieve  Vrouwe Presentatie">OLVP</abbr> in Sint-Niklaas. Na het middelbaar heb ik de richting Toegepast Informatica gevolgd aan Karel de Grote Hogeschool Groenplaats. Na 1 jaar ben ik hiermee gestopt omdat dit te technisch was voor mij en ik meer praktijk zocht.</p>
         </section>
 
-        <section>
+        <section class="ambitie">
             <h3>Ambitie</h3>
             <p>Graag wil ik na de opleiding Graduaat programmeren aan de slag gaan als (web)developer.</p>
         </section>
 
-        <section>
-            <h2>Curriculum vitae</h2>
+        <section class="cv">
+            <h3>Curriculum vitae</h2>
             <p>Heeft u interesse in mijn cv, klik dan <a href="docs/Brent-Van-Hese.pdf" target="blank">hier</a>.</p>
         </section>
 
