foto's aan projecten toevoegen

--- a/projecten.html
+++ b/projecten.html
@@ -28,7 +28,7 @@
 
         <section class="project-cards">
             <div class="card">
-                <div class="sizeBoxPhotoProject"><img src="images/projecten/portfolio.PNG" alt="Portfolio"></div>
+                <div class="sizeBoxPhotoProject"><img src="images/projecten/portfolio/portfolio.PNG" alt="Portfolio"></div>
                 <div class="container">
                   <h4><b>Portfolio</b></h4> 
                   <p>De website die als mijn portfolio dient. Gemaakt met HTML en CSS.</p>
@@ -37,7 +37,7 @@
             </div>
     
             <div class="card">
-                <div class="sizeBoxPhotoProject"><img src="images/projecten/build_a_city.PNG" alt="Build a city" ></div>
+                <div class="sizeBoxPhotoProject"><img src="images/projecten/build-a-city/build_a_city.PNG" alt="Build a city" ></div>
                 <div class="container">
                   <h4><b>Build a city</b></h4> 
                   <p>Bij deze opdracht moesten we met de hele groep van studenten een eiland maken. En dit was dan ook een SCRUM simulatie.</p>
@@ -46,7 +46,7 @@
             </div>
     
             <div class="card">
-                <div class="sizeBoxPhotoProject"><img src="images/projecten/portfolio.PNG" alt="Console game"></div>
+                <div class="sizeBoxPhotoProject"><img src="images/projecten/console-game/Game plattegrond.jpg" alt="Console game"></div>
                 <div class="container">
                   <h4><b>Console game</b></h4> 
                   <p>tekst over console game</p>
@@ -55,7 +55,7 @@
             </div>
 
             <div class="card">
-                <div class="sizeBoxPhotoProject"><img src="images/projecten/portfolio.PNG" alt="Console game"></div>
+                <div class="sizeBoxPhotoProject"><img src="images/projecten/bootstrap/home.PNG" alt="Console game"></div>
                 <div class="container">
                   <h4><b>Bootstrap website</b></h4> 
                   <p>Een website die gemaakt is met HTML en Bootstrap.</p>
