foto toevoegen aan project console game

--- a/projecten.html
+++ b/projecten.html
@@ -46,7 +46,7 @@
             </div>
     
             <div class="card">
-                <div class="sizeBoxPhotoProject"><img src="images/projecten/console-game/Game plattegrond.jpg" alt="Console game"></div>
+                <div class="sizeBoxPhotoProject"><img src="images/projecten/console-game/console.PNG" alt="Console game"></div>
                 <div class="container">
                   <h4><b>Console game</b></h4> 
                   <p>tekst over console game</p>
