--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,9 @@
 
     <main>
         <h2>Contacteer mij</h2>
+        <button class="contactLink"><a href="https://www.linkedin.com/in/brentvanhese/" target="blank">Linkedin</a></button>
+        <button class="contactLink"><a href="https://github.com/brentvanhese" target="blank">GitHub</a></button>
+
         <div class="container-contactform">
             <form action="post-demo.php" method="post">
           
