--- a/over-mij.html
+++ b/over-mij.html
@@ -62,7 +62,7 @@
 
         <section class="cv">
             <h3>Curriculum vitae</h2>
-            <p>Heeft u interesse in mijn cv, klik dan <a href="docs/Brent-Van-Hese.pdf" target="blank">hier</a>.</p>
+            <p>Heeft u interesse in mijn cv, klik dan <a href="docs/cv Brent Van Hese.pdf" target="blank">hier</a>.</p>
         </section>
 
     </main>
